Make sure the nudge button doesn't wrap

--- a/client/my-sites/activity/activity-log-banner/style.scss
+++ b/client/my-sites/activity/activity-log-banner/style.scss
@@ -109,6 +109,10 @@
 
 .activity-log-banner__upgrade {
 	margin-top: 1px;
+
+	.button {
+		white-space: nowrap;
+	}
 }
 
 // Introduction banner
